--- a/19_프로토타입.md
+++ b/19_프로토타입.md
@@ -1,4 +1,7 @@
 # 19.프로토타입
+> [모던 javascript 튜토리얼](https://ko.javascript.info/prototypes)
+> [코딩애플 유튜브 - prototype](https://youtu.be/wUgmzvExL_E?feature=shared)
+
 자바크립트는 객체 기반의 프로그래밍 언어다.
 자바스크립트를 이루고 있는 거의 "모든것"이 객체다
 
@@ -8,12 +11,50 @@
 ## 19.2 상속과 프로토타입
 상속은 객체지향 프로그래밍의 핵심개념.
 어떤 객체의 프로퍼티, 메소드를 다른 객체가 그대로 상속받아 사용할 수 있는 것을 말한다.
+```
+function Circle(radius) {
+	this.radius = radius
+	this.getArea = function() {
+		return Math.PI * this.radius **2
+	}
+}
+
+const circle1 = new Circle(3)
+const circle2 = new Circle(6)
+
+console.log(circle1.getArea === circle2.getArea) // false
+```
+이때 circle1 circle2 모두 radius프로퍼티와 getArea 메서드를 갖는다. radius 프로퍼티는 인스턴스마다 다를 수 있지만 getArea 메서드는 모든 인스턴스가 동일한 내용의 메서드를 사용하기 때문에 단 하나만 생성하여 모든 인스턴스가 공유하도록 사용하는 것이 바람직하다.
 
 ## 19.3 프로토타입 객체
 모든 객체는 하나의 프로토타입을 갖는다. 그리고 모든 프로토타입은 생성자 함수와 연결되어 있다.
 
-### 19.3.1 __proto__ 접근자 프로퍼티
-모든 객체는 __proto__ 접근자 프로퍼티를 통해 자신의 프로토타입, [[prototype]] 내부 슬롯에 간접 접근 할 수 있다.
+### 19.3.1 `__proto__` 접근자 프로퍼티
+모든 객체는 `__proto__` 접근자 프로퍼티를 통해 자신의 프로토타입, [[prototype]] 내부 슬롯에 간접 접근 할 수 있다.
+
+#### `__proto__`로 접근해야되는 이유
+> 상호 참조에 의해 프로토타입 체인이 생성되는 것을 방지하기 위해
+- 프로토타입 체인은 **단방향 링크드 리스트**로 구현되어야한다
+- 순환 참조되는 프로토타입 체인이 만들어지면 체인 종점이 존재하지 않기 때문에 무한루프에 빠진다.
+
+#### `__propto__`접근자 프로퍼티를 코드내에서 직접 사용하는것은 권장하지 않음
+- 모든 객체가 `__proto__` 접근자 프로퍼티를 사용할 수 있는것이 아니기 때문에 권장❌
+- Object.proptotype을 상속받지 않는 객체를 생성 할 수도 있기 때문에 `__proto__` 접근자 프로퍼티를 사용할 수 없는 경우가 있다
+- `__proto__` 접근자 프로퍼티개 대신 `getPrototypeOf()`, `setPrototypeOf()`메서드 사용
 
 ### 19.3.2 함수 객체의 prototype 프로퍼티
 함수 객체만이 소유하는 prototype 프로퍼티는 생성자 함수가 생성할 인스턴스의 프로토타입을 가르킴.
+```
+// 함수 객체는 prototype 프로퍼티를 소유한다
+(function(){}).hasOwnProperty('prototype') // true
+
+// 일반 객체는 prototype 프로퍼티를소유하지 않는다
+{}.hasOwnProperty('prototype') // false
+```
+모든 객체가 가지고 있는 `__proto__`접근자 프로퍼티와 함수 객체만이 가지고 있는 prototype 프로퍼티는 결국 동일한 프로토타입을 가리키지만, 프로퍼티를 사용하는 주체가 다르다.
+|구분|소유|값|사용주체|사용목적|
+|------|---|---|---|---|
+|`__proto__` 접근자 프로퍼티|모든객체|프로토타입 참조|모든 객체|객체가 자신의 프로토타입에 접근, 교체하기 위해 사용|
+|prototype 프로퍼티|constructor|프로토타입 참조|생성자 함수|생성자 함수가 자신이 생성할 객체(인스턴스)의 프로토타입을 할당하기 위해 사용|
+### 19.3.3 프로토타입의 construtor 프로퍼티와 생성자 함수
+모든 프로토타입은 constructor 프로퍼티를 갖는다.
