--- a/19_프로토타입.md
+++ b/19_프로토타입.md
@@ -1,5 +1,5 @@
 # 19.프로토타입
-> [모던 javascript 튜토리얼](https://ko.javascript.info/prototypes)
+> [모던 javascript 튜토리얼](https://ko.javascript.info/prototypes)<br>
 > [코딩애플 유튜브 - prototype](https://youtu.be/wUgmzvExL_E?feature=shared)
 
 자바크립트는 객체 기반의 프로그래밍 언어다.
@@ -54,7 +54,7 @@ console.log(circle1.getArea === circle2.getArea) // false
 모든 객체가 가지고 있는 `__proto__`접근자 프로퍼티와 함수 객체만이 가지고 있는 prototype 프로퍼티는 결국 동일한 프로토타입을 가리키지만, 프로퍼티를 사용하는 주체가 다르다.
 |구분|소유|값|사용주체|사용목적|
 |------|---|---|---|---|
-|`__proto__` 접근자 프로퍼티|모든객체|프로토타입 참조|모든 객체|객체가 자신의 프로토타입에 접근, 교체하기 위해 사용|
-|prototype 프로퍼티|constructor|프로토타입 참조|생성자 함수|생성자 함수가 자신이 생성할 객체(인스턴스)의 프로토타입을 할당하기 위해 사용|
+|`__proto__` <br>접근자 프로퍼티|모든객체|프로토타입 참조|모든 객체|객체가 자신의 프로토타입에 접근, 교체하기 위해 사용|
+|prototype<br>프로퍼티|constructor|프로토타입 참조|생성자 함수|생성자 함수가 자신이 생성할 객체(인스턴스)의 프로토타입을 할당하기 위해 사용|
 ### 19.3.3 프로토타입의 construtor 프로퍼티와 생성자 함수
 모든 프로토타입은 constructor 프로퍼티를 갖는다.
