--- a/19_프로토타입.md
+++ b/19_프로토타입.md
@@ -57,4 +57,61 @@ console.log(circle1.getArea === circle2.getArea) // false
 |`__proto__` <br>접근자 프로퍼티|모든객체|프로토타입 참조|모든 객체|객체가 자신의 프로토타입에 접근, 교체하기 위해 사용|
 |prototype<br>프로퍼티|constructor|프로토타입 참조|생성자 함수|생성자 함수가 자신이 생성할 객체(인스턴스)의 프로토타입을 할당하기 위해 사용|
 ### 19.3.3 프로토타입의 construtor 프로퍼티와 생성자 함수
-모든 프로토타입은 constructor 프로퍼티를 갖는다.
+모든 프로토타입은 constructor 프로퍼티를 갖는다. 이 프로퍼티는 prototype 프로퍼티로 자신을 참조하고 있는 생성자 함수를 가리킨다. 이 연결은 함수 객체가 생성될 때 이뤄진다.
+
+## 19.4 리터럴 표기법에 의해 생성된 객체의 생성자 함수와 프로토타입
+생성자 함수의 이해 생성된 인스턴스는 프로토타입의 constructor 프로퍼티에 의해 생성자 함수와 연결되어 있다.
+리터럴 표기법에 의해 생성된 객체의 경우도 프로토타입은 존재한다. 하지만 프로토타입의 constructor프로퍼티가 가리키는 생성자 함수가 반드시 객체를 생성한 함수라고 단정할 수는 없다.
+```
+// 리터럴 표기법으로 obj객체 생성
+const obj = {}
+
+// obj 객체의 생성자 함수는 Object 생성자 함수
+console.log(obj.constructor === Object) // true
+```
+위 예제의 `obj`객체는 객체 리터럴에 의해 생성된 객체이지만 Object의 생성자 함수와 constructor프로퍼티가 연결되어 있다.
+
+리터럴 표기법에 의해 생성된 객체도 상속을 위해 프로토타입이 필요하다. 리터럴 표기법에 의해 생성된 객체도 가상적인 생성자 함수를 갖는다. 프로토타입은 생성자 함수와 더불어 생성되며 prototype, constructor 프로퍼티에 의해 연결되어 있기 때문이다.
+**프로토타입과 생성자 함수는 단독으로 존재할 수 없고 언제나 쌍(pair)으로 존재한다**
+|리터럴 표기법|생성자 함수| 프로토타입|
+|--|--|--|
+|객체 리터럴|Object|Object.prototype|
+|함수 리터럴|Function|Function.prototype|
+|배열 리터럴|Array|Array.prototype|
+|정규 표현식 리터럴|RegExp|RegExp.prototype|
+
+## 19.5 프로토타입의 생성 시점
+프로토타입은 생성자 함수가 생성되는 시점에 더불어 생성된다. 생성자 함수는 사용자가 직접 정의한 사용자 정의 함수와 자바스크립트가 기본으로 제공하는 빌트인 생성자 함수로 구분할 수 있다.
+
+### 19.5.1 사용자 정의 생성자 함수와 프로토타입 생성 시점
+생성자 함수로서 호출할 수 있는 함수(constructor)는 함수 정의가 평가되어 함수 객체를 생성하는 시점에 프로토 타입도 더불어 생성된다<br>
+`constructor`는 함수 정의가 평가되어 함수 객체를 생성 `non-contructor`는 프로토타입이 생성되지 않는다.
+
+### 19.5.2 빌트인 생성사 함수와 프로토타입 생성시점
+빌트인 생성자 합수가 생성되는 시점에 프로토타입이 생성된다. 모든 빌트인 생성자 함수는 전역 객체가 생성되는 시점에 생성된다. 생성된 프로토타입은 빌트인 생성자 함수의 prototype 프로퍼티에 반인딩 된다.<br>
+객체가 생성되기 이전에 생성자 함수와 프로토타입은 이미 객체화되어 존재한다. 이후 생성자 함수 또는 리터럴 표기법으로 객체를 생성하면 프로토타입은 생성된 객체의 [[Prototype]] 내부 슬롯에 할당된다. 생성된 객체는 프로토타입을 상속 받는다.
+
+## 19.6 객체 생성 방식과 프로토타입의 결졍
+객체 생성방법
+- 객체 리터럴
+- Object 생성자 함수
+- 생성자 함수
+- Object.create 메서드
+- 클래스
+각 생성 방법 마다 차이는 있지만, 추상 연산 `OrdinaryObjectCreate`에 의해 생성된다.<br>
+추상연산 `OrdinaryObjectCreate`은 자신이 생성할 객체의 프로토타입을 인수로 전달 받으며 프로퍼티 목록을 옵션으로 전달 할 수 있다. 추상 연산 `OrdinaryObjectCreate`는 빈 객체를 생성하고 프로퍼티를 객체의 [[Prototype]] 내부 슬롯에 할당하고 객체를 반환한다.
+> 프로토타입은 추상 연산 `OrdinaryObjectCreate`에 전달되는 인수에 의해 결정된다. 이 인수는 객체가 생성되는 시점에 객체 생성 방식에 의해 결정된다
+
+### 19.6.1 객체 리터럴에 의해 생성된 객체의 프로토타입
+객체 리터럴을 평가해 객체를 생성할 때 추상 연산 `OrdinaryObjectCreate`호출.<br>
+`OrdinaryObjectCreate`에 전달 되는 프로토타입은 `Object.prototype`이다.
+
+### 19.6.2 생성자 함수에 의해 생성된 객체의 프로토타입
+객체 리터럴과 마찬가지로 추상 연산 `OrdinaryObjectCreate`호출하고 전달되는 프로토타입은 `Object.prototype`이다.<br>
+Object 생성자 함수, 객체 리터럴에 의해 객체 생성 차이
+- Object 생성자 함수: 빈 객체를 생성 후 프로퍼티 추가
+- 객체 리터럴: 객체 리터럴 내부에 프로퍼티 추가
+
+### 19.6.3 생성자 함수에 의해 생성된 객체의 프로토타입
+
+
