23-10-30 19장 프로토타입

--- a/19_프로토타입.md
+++ b/19_프로토타입.md
@@ -25,6 +25,20 @@ const circle2 = new Circle(6)
 console.log(circle1.getArea === circle2.getArea) // false
 ```
 이때 circle1 circle2 모두 radius프로퍼티와 getArea 메서드를 갖는다. radius 프로퍼티는 인스턴스마다 다를 수 있지만 getArea 메서드는 모든 인스턴스가 동일한 내용의 메서드를 사용하기 때문에 단 하나만 생성하여 모든 인스턴스가 공유하도록 사용하는 것이 바람직하다.
+```
+function Circle(radius) {
+	this.radius = radius
+}
+
+Circle.Prototype.getArea = function() {
+	return Math.PI * this.radius **2
+}
+
+const circle1 = new Circle(3)
+const circle2 = new Circle(6)
+
+console.log(circle1.getArea === circle2.getArea) // true
+```
 
 ## 19.3 프로토타입 객체
 모든 객체는 하나의 프로토타입을 갖는다. 그리고 모든 프로토타입은 생성자 함수와 연결되어 있다.
@@ -33,7 +47,7 @@ console.log(circle1.getArea === circle2.getArea) // false
 모든 객체는 `__proto__` 접근자 프로퍼티를 통해 자신의 프로토타입, [[prototype]] 내부 슬롯에 간접 접근 할 수 있다.
 
 #### `__proto__`로 접근해야되는 이유
-> 상호 참조에 의해 프로토타입 체인이 생성되는 것을 방지하기 위해
+**상호 참조에 의해 프로토타입 체인이 생성되는 것을 방지하기 위해**
 - 프로토타입 체인은 **단방향 링크드 리스트**로 구현되어야한다
 - 순환 참조되는 프로토타입 체인이 만들어지면 체인 종점이 존재하지 않기 때문에 무한루프에 빠진다.
 
@@ -113,5 +127,119 @@ Object 생성자 함수, 객체 리터럴에 의해 객체 생성 차이
 - 객체 리터럴: 객체 리터럴 내부에 프로퍼티 추가
 
 ### 19.6.3 생성자 함수에 의해 생성된 객체의 프로토타입
+생성자 함수에 의해 생성되는 객체의 프로토타입은 생성자 함수의 prototype 프로퍼티에 바인딩되어 있는 객체다.
 
+## 19.7 프로토타입 체인
+자바스크립트 객체의 프로퍼티(메서드 포함)에 접근하려 할 때 객체에 접근하려는 프로퍼티가 없다면 [[Prototype]] 내부 슬롯의 참조를 따라 자신의 부모 역할을 하는 프로토타입의 프로퍼티를 순차적으로 검색하는 것을 프로토타입 체인이라 한다.<br>
+프로토타입 체인은 자바스크립트가 객체지향 프로그래밍의 상속을 구현하는 메커니즘이다.<br>
+**Object.prototye을 프로토타입 체인의 종점이라 한다.** Object.prototye의 프로토타입, 즉 [[Prototype]] 내부 슬롯값은 `null`이다. Object.prototye에서도 프로퍼티를 검색 할 수 없는 경우 `undefined`를 반환한다.<br>
+**프로토타입 체인은 상속과 프로퍼티 검색을 위한 메커니즘**이라고 한다.<br>
+이에 반해 식별자는 스코프체인에서 검색한다. 스코프체인은 식별자 검색을 위한 메커니즘이다. **스코프 체인과 프로토타립 체인은 서로 협력하여 식별자와 프로퍼티를 검색하는데 사용된다.**
 
+## 19.8 오버라이딩과 프로퍼티 섀도잉
+```
+function Person(name) {
+	this.name = name
+}
+Person.prototype.say = function(){
+	console.log('Person - my name '+ this.name)
+}
+const me = new Person('kim')
+
+me.say = function() {
+	console.log('me - my name ' + this.name)
+}
+
+// 인스턴스 메서드 호출. 프로토타입 메서드는 인스턴스 메서드에 의해 가려짐
+me.say() // me - my name kim
+
+// 인스턴스 메서드 삭제
+delete me.say
+// 인스턴스 메서드가 없으므로 프로토타입 메서드 호출
+me.say() // Person - my name kim
+
+// 프로토타입 체인을 통해 프로토타입 메서드가 삭제 되지 않는다.
+delete me.say
+// 프로토타입 메서드가 호출
+me.say() // Person - my name kim
+
+// 프로토타입 메서드 삭제
+delete Person.prototype.say
+me.say() // TypeError: me.say is not a function
+```
+프로토타입이 소유한 프로퍼티를 프로토타입 프로퍼티, 인스턴스가 소유한 프로퍼티를 인스턴스 프로퍼티라고 부른다.<br>
+프로토타입 프로퍼티와 같은 이름의 프로퍼티를 인스턴스에 추가하면 프로토타입 체인을 따라 프로토타입 프로퍼티를 검색하여 인스턴스 프로퍼티를 추가한다. 이때 인스턴스 메서드 say는 프로토타입 메서드 say를 오버라이딩 했고, 프로토타입 메서드 say는 가려진다. 이처럼 상속 관계에 의해 프로퍼티가 가려지는 현상을 프로퍼티 섀도잉이라 한다.
+
+**오버라이딩(overriding)** 상위 클래스가 가지고 있는 메서드를 하위 클래스가 재정의하여 사용하는 방식
+
+## 19.9 프로토타입 교체
+프로토타입은 임의의 다른 객체로 변경 할 수 있다. 부모 객체인 프로토타입을 동적으로 변경할 수 있다는 것을 의미한다. **객체 간의 상속 관계를 동적으로 변경할 수 있다.** 프로토타입은 생성자 함수 또는 인스턴스에 의해 교체 할 수 있다.
+
+### 19.9.1 생성자 함수에 의한 프로토타입 교체
+```
+const Person = (function(){
+	function Person(name) {
+		this.name = name
+	}
+
+	Person.prototype = {
+		// constructor: Person,
+		say(){
+			console.log('say ', this.name)
+		}
+	}
+
+	return Person;
+}());
+const me = new  Person('kim')
+
+me.constructor === Person // false
+me.constructor === Object // true
+```
+countructor 프로퍼티는 자바스크립트 엔진이 프로토타입을 생성할때 암묵적으로 추가한 프로퍼티다.<br>
+프로토타입을 교체하면 constructor 프로퍼티와 생성자 함수 간의 연결이 파괴된다.
+이때 객체 리터럴에 constructor 프로퍼티를 추가하여 프로토타입의 constructor 프로퍼티를 추가한다
+
+### 19.9.2 인스턴스에 의한 프로토타입 교체
+```
+function Person(name) {
+	this.name = name
+}
+const me = new Person('kim')
+
+const parent = {
+	constructor: Person,
+	say() {
+		console.log('hi ', this.name)
+	}
+}
+
+// 생성자 함수의 prototype 프로퍼티와 프로토타입간의 연결을 설정
+Person.prototype = parent;
+
+// me객체의 프로토 타입을 parent 객체로 교체
+Object.setPrototypeOf(me, parent); // me.__proto__ = parent; 동일함
+
+me.say() // hi kim
+
+me.countructor === Person // true
+me.countructor === Object // false
+
+Person.prototype === Object.getPrototypeOf(me) // true
+
+```
+`Object.setPrototypeOf(인스턴스, 객체리터럴)`를 활용해 인스턴스의 `__proto__`접근자로 접근하여 교체할 리터럴을 할당한다.
+인스턴스 방식
+
+**생성자 함수의 prototype 프로퍼티**에 다른 임의의 객체를 바인딩 하는것은 미래에 생성할 인스턴스의 프로토 타입을 교체하는 것이다.
+**`__proto__`접근자 프로퍼티를 통해 프로토타입을 교체**하는것은 이미 생성된 객체의 프로토타입을 교체하는 것이다.
+
+><i>프로토타입 교체를 통한 상속관계를 동적으로 변경하는 것은 번거롭기 때문에 프로토타입은 직접 교체하지 않는 것이 좋다. **상속 관계를 인위적으로 설정하려면 "직접 상속" 방법을 사용해야 더 편리하고 안전하다**</i>
+
+## 19.10 instanceof 연산자
+`객체 instanceof 생성자 함수`
+우변의 생성자 함수의 prototype에 바인딩된 객체가 좌변의 객체 프로토타입 체인상에 존재하면 true, 그렇지 않은 경우에 false<br>
+생성자 함수의 prototype에 바인딩된 객체가 프로토타입 체인 상에 존재하는지 확인한다.
+
+## 19.11 직접 상속
+### 19.11.1 Object.create에 의한 직접 상속
