--- a/19_프로토타입.md
+++ b/19_프로토타입.md
@@ -3,10 +3,10 @@
 > [코딩애플 유튜브 - prototype](https://youtu.be/wUgmzvExL_E?feature=shared)
 
 자바크립트는 객체 기반의 프로그래밍 언어다.
-자바스크립트를 이루고 있는 거의 "모든것"이 객체다
+자바스크립트를 이루고 있는 거의 "모든것"이 객체다.
 
 ## 19.1 객체지향 프로그래밍
-객체지향 프로그래밍은 객체의 집합으로 프로그램을 표현하려는 프로그래밍 패러다임을 의미한다
+객체지향 프로그래밍은 객체의 집합으로 프로그램을 표현하려는 프로그래밍 패러다임을 의미한다.
 
 ## 19.2 상속과 프로토타입
 상속은 객체지향 프로그래밍의 핵심개념.
@@ -48,21 +48,21 @@ console.log(circle1.getArea === circle2.getArea) // true
 
 #### `__proto__`로 접근해야되는 이유
 **상호 참조에 의해 프로토타입 체인이 생성되는 것을 방지하기 위해**
-- 프로토타입 체인은 **단방향 링크드 리스트**로 구현되어야한다
+- 프로토타입 체인은 **단방향 링크드 리스트**로 구현되어야한다.
 - 순환 참조되는 프로토타입 체인이 만들어지면 체인 종점이 존재하지 않기 때문에 무한루프에 빠진다.
 
-#### `__propto__`접근자 프로퍼티를 코드내에서 직접 사용하는것은 권장하지 않음
+#### `__propto__`접근자 프로퍼티를 코드내에서 직접 사용하는것은 권장하지 않음.
 - 모든 객체가 `__proto__` 접근자 프로퍼티를 사용할 수 있는것이 아니기 때문에 권장❌
-- Object.proptotype을 상속받지 않는 객체를 생성 할 수도 있기 때문에 `__proto__` 접근자 프로퍼티를 사용할 수 없는 경우가 있다
-- `__proto__` 접근자 프로퍼티개 대신 `getPrototypeOf()`, `setPrototypeOf()`메서드 사용
+- Object.proptotype을 상속받지 않는 객체를 생성 할 수도 있기 때문에 `__proto__` 접근자 프로퍼티를 사용할 수 없는 경우가 있다.
+- `__proto__` 접근자 프로퍼티개 대신 `getPrototypeOf()`, `setPrototypeOf()`메서드 사용.
 
 ### 19.3.2 함수 객체의 prototype 프로퍼티
 함수 객체만이 소유하는 prototype 프로퍼티는 생성자 함수가 생성할 인스턴스의 프로토타입을 가르킴.
 ```
-// 함수 객체는 prototype 프로퍼티를 소유한다
+// 함수 객체는 prototype 프로퍼티를 소유한다.
 (function(){}).hasOwnProperty('prototype') // true
 
-// 일반 객체는 prototype 프로퍼티를소유하지 않는다
+// 일반 객체는 prototype 프로퍼티를소유하지 않는다.
 {}.hasOwnProperty('prototype') // false
 ```
 모든 객체가 가지고 있는 `__proto__`접근자 프로퍼티와 함수 객체만이 가지고 있는 prototype 프로퍼티는 결국 동일한 프로토타입을 가리키지만, 프로퍼티를 사용하는 주체가 다르다.
@@ -86,7 +86,7 @@ console.log(obj.constructor === Object) // true
 위 예제의 `obj`객체는 객체 리터럴에 의해 생성된 객체이지만 Object의 생성자 함수와 constructor프로퍼티가 연결되어 있다.
 
 리터럴 표기법에 의해 생성된 객체도 상속을 위해 프로토타입이 필요하다. 리터럴 표기법에 의해 생성된 객체도 가상적인 생성자 함수를 갖는다. 프로토타입은 생성자 함수와 더불어 생성되며 prototype, constructor 프로퍼티에 의해 연결되어 있기 때문이다.
-**프로토타입과 생성자 함수는 단독으로 존재할 수 없고 언제나 쌍(pair)으로 존재한다**
+**프로토타입과 생성자 함수는 단독으로 존재할 수 없고 언제나 쌍(pair)으로 존재한다.**
 |리터럴 표기법|생성자 함수| 프로토타입|
 |--|--|--|
 |객체 리터럴|Object|Object.prototype|
@@ -98,7 +98,7 @@ console.log(obj.constructor === Object) // true
 프로토타입은 생성자 함수가 생성되는 시점에 더불어 생성된다. 생성자 함수는 사용자가 직접 정의한 사용자 정의 함수와 자바스크립트가 기본으로 제공하는 빌트인 생성자 함수로 구분할 수 있다.
 
 ### 19.5.1 사용자 정의 생성자 함수와 프로토타입 생성 시점
-생성자 함수로서 호출할 수 있는 함수(constructor)는 함수 정의가 평가되어 함수 객체를 생성하는 시점에 프로토 타입도 더불어 생성된다<br>
+생성자 함수로서 호출할 수 있는 함수(constructor)는 함수 정의가 평가되어 함수 객체를 생성하는 시점에 프로토 타입도 더불어 생성된다.<br>
 `constructor`는 함수 정의가 평가되어 함수 객체를 생성 `non-contructor`는 프로토타입이 생성되지 않는다.
 
 ### 19.5.2 빌트인 생성사 함수와 프로토타입 생성시점
@@ -106,7 +106,7 @@ console.log(obj.constructor === Object) // true
 객체가 생성되기 이전에 생성자 함수와 프로토타입은 이미 객체화되어 존재한다. 이후 생성자 함수 또는 리터럴 표기법으로 객체를 생성하면 프로토타입은 생성된 객체의 [[Prototype]] 내부 슬롯에 할당된다. 생성된 객체는 프로토타입을 상속 받는다.
 
 ## 19.6 객체 생성 방식과 프로토타입의 결졍
-객체 생성방법
+**객체 생성방법**
 - 객체 리터럴
 - Object 생성자 함수
 - 생성자 함수
@@ -114,7 +114,7 @@ console.log(obj.constructor === Object) // true
 - 클래스
 각 생성 방법 마다 차이는 있지만, 추상 연산 `OrdinaryObjectCreate`에 의해 생성된다.<br>
 추상연산 `OrdinaryObjectCreate`은 자신이 생성할 객체의 프로토타입을 인수로 전달 받으며 프로퍼티 목록을 옵션으로 전달 할 수 있다. 추상 연산 `OrdinaryObjectCreate`는 빈 객체를 생성하고 프로퍼티를 객체의 [[Prototype]] 내부 슬롯에 할당하고 객체를 반환한다.
-> 프로토타입은 추상 연산 `OrdinaryObjectCreate`에 전달되는 인수에 의해 결정된다. 이 인수는 객체가 생성되는 시점에 객체 생성 방식에 의해 결정된다
+> 프로토타입은 추상 연산 `OrdinaryObjectCreate`에 전달되는 인수에 의해 결정된다. 이 인수는 객체가 생성되는 시점에 객체 생성 방식에 의해 결정된다.
 
 ### 19.6.1 객체 리터럴에 의해 생성된 객체의 프로토타입
 객체 리터럴을 평가해 객체를 생성할 때 추상 연산 `OrdinaryObjectCreate`호출.<br>
@@ -122,7 +122,7 @@ console.log(obj.constructor === Object) // true
 
 ### 19.6.2 생성자 함수에 의해 생성된 객체의 프로토타입
 객체 리터럴과 마찬가지로 추상 연산 `OrdinaryObjectCreate`호출하고 전달되는 프로토타입은 `Object.prototype`이다.<br>
-Object 생성자 함수, 객체 리터럴에 의해 객체 생성 차이
+**Object 생성자 함수, 객체 리터럴에 의해 객체 생성 차이**
 - Object 생성자 함수: 빈 객체를 생성 후 프로퍼티 추가
 - 객체 리터럴: 객체 리터럴 내부에 프로퍼티 추가
 
@@ -150,7 +150,7 @@ me.say = function() {
 	console.log('me - my name ' + this.name)
 }
 
-// 인스턴스 메서드 호출. 프로토타입 메서드는 인스턴스 메서드에 의해 가려짐
+// 인스턴스 메서드 호출. 프로토타입 메서드는 인스턴스 메서드에 의해 가려짐(프로퍼티 섀도잉).
 me.say() // me - my name kim
 
 // 인스턴스 메서드 삭제
@@ -170,7 +170,7 @@ me.say() // TypeError: me.say is not a function
 프로토타입이 소유한 프로퍼티를 프로토타입 프로퍼티, 인스턴스가 소유한 프로퍼티를 인스턴스 프로퍼티라고 부른다.<br>
 프로토타입 프로퍼티와 같은 이름의 프로퍼티를 인스턴스에 추가하면 프로토타입 체인을 따라 프로토타입 프로퍼티를 검색하여 인스턴스 프로퍼티를 추가한다. 이때 인스턴스 메서드 say는 프로토타입 메서드 say를 오버라이딩 했고, 프로토타입 메서드 say는 가려진다. 이처럼 상속 관계에 의해 프로퍼티가 가려지는 현상을 프로퍼티 섀도잉이라 한다.
 
-**오버라이딩(overriding)** 상위 클래스가 가지고 있는 메서드를 하위 클래스가 재정의하여 사용하는 방식
+**오버라이딩(overriding)** 상위 클래스가 가지고 있는 메서드를 하위 클래스가 재정의하여 사용하는 방식.
 
 ## 19.9 프로토타입 교체
 프로토타입은 임의의 다른 객체로 변경 할 수 있다. 부모 객체인 프로토타입을 동적으로 변경할 수 있다는 것을 의미한다. **객체 간의 상속 관계를 동적으로 변경할 수 있다.** 프로토타입은 생성자 함수 또는 인스턴스에 의해 교체 할 수 있다.
@@ -243,3 +243,181 @@ Person.prototype === Object.getPrototypeOf(me) // true
 
 ## 19.11 직접 상속
 ### 19.11.1 Object.create에 의한 직접 상속
+명시적으로 프로토타입을 지정하여 새로운 객체를 생성.<br>
+다른 객체 생성 방식과 동일하게 추상 연산 OrdinaryObjectCreate를 호출<br>
+`Object.create`
+- new 연산자 없이 객체 생성가능.
+- 프로토타입을 지정하면서 객체를 생성할 수 있음.
+- 객체 리터럴에 의해 생성된 객체도 상속 받을 수 있음.
+```
+let obj = Object.create(Object.prototype, {
+	x: {value: 1, writable: true, enumerable: true, configurable: true}
+})
+
+// 위 코드는 아래와 동일
+// let obj = Object.create(Object.prototype)
+// obj.x = 1
+
+console.log(Object.getPrototypeOf(obj) === Object.prototype); // true
+
+const myProto = { x: 10 }
+obj = Object.create(myProto)
+console.log(obj.x) // 10
+console.log(Object.getPrototypeOf(obj) === myProto); // true
+```
+ESLint에서 `Object.prototype`의 빌트인 메서드를 객체가 직접 호출하는 것은 권장하지 않음. `Object.create`메서드를 통해 프로토타입 체인 종점에 위치하는 객체를 생성 할 수 있기 때문.
+프로토타입 체인 종점에 위치하는 객체는 `Object.prototype`의 빌트인 메서드를 사용할 수 없음.
+```
+// 프로토타입이 null 인 객체를 생성
+const obj = Object.create(null);
+obj.a = 1;
+
+// console.log(obj.hasOwnProperty("a"));   // TypeError: obj.hasOwnProperty is not a function
+console.log(Object.prototype.hasOwnProperty.call(obj, "a")); // true
+```
+
+### 19.11.2 객체 리터럴 내부에서 __proto__에 의한 직접 상속
+ES6에서는 객체 리터럴 내부에서 `__proto__`접근자 프로퍼티를 사용하여 직접 상속을 구현할 수 있음.
+```
+const myProto = { x: 10 }
+const obj = {
+	y: 20,
+	__proto__: myProto
+}
+console.log(obj.x, obj.y) // 10, 20
+console.log(Object.getPrototypeOf(obj) === myProto) // true
+```
+
+## 19.12 정적 프로퍼티
+```
+// 생성자 함수
+function Person(name) {
+	this.name = name
+}
+
+// 프로토타입 메서드
+Person.prototype.sayHello = function () {
+  console.log(`HI, My name is ${this.name}`);
+};
+
+// 정적 프로퍼티
+Person.staticProp = 'static prop'
+
+// 정적 메소드
+Person.staticMethod = function() {
+	console.log('static method')
+}
+
+const me = new Person('kim')
+
+Person.staticMethod() // static method
+me.staticMethod() // TypeError: me.staticMethod is not a function
+```
+**정적 프로퍼티, 정적 메서드는 생성자 함수가 생성한 인스턴스로 참조/호출할 수 없다.**
+정적 프로퍼티/메서드는 인스턴스의 프로토타입 체인에 속한 객체의 프로퍼티/메서드가 아니므로 인스턴스로 접근할 수 없다.
+
+## 19.13 프로퍼티 존재 확인
+### 19.13.1 `in` 연산자
+객체 내부에 프로퍼티가 있는지 존재 여부를 확인 -> `boolean`<br>
+```
+key in object
+```
+**`in`연산자는 확인 대상의 객체의 프로퍼티 뿐만아니라 상속받은 모든 프로토타입의 프로퍼티를 확인한다.**
+```
+const person = {
+  name: "kim",
+  age: 100,
+};
+
+console.log("name" in person); // true
+console.log("age" in person); // true
+console.log("address" in person); // false -> address 프로퍼티는 person 객체에 정의되어 있지 않으므로 false
+
+
+console.log("toString" in person); // true
+```
+`toString` 메서드는 `person` 객체의 프로퍼티에는 존재하지 않는다.<br>
+하지만 person 객체의 프로토 타입인 `Object.prototype`에 `toString`메서드가 존재하기 떄문에 `true`를 반환한다.
+
+### 19.13.3 `Object.prototype.hasOwnProperty` 메서드
+객체에 특정 프로퍼티가 존재하는지 확인할 수 있다.<br>
+객체 고유의 프로퍼티 키 인 경우에만 true 를 반환.<br>
+상속받은 프로토타입의 프로퍼티 키인 경우는 false 를 반환한다.
+```
+const person = {
+  name: "kim",
+  age: 100,
+};
+
+console.log(person.hasOwnProperty(name)); // true
+console.log(person.hasOwnProperty('toString')); // false
+```
+
+## 19.14 프로퍼티 열거
+### 19.14.1 `for...in` 문
+객체의 모든 프로퍼티를 순회하며 열거 할때 사용
+```
+for( 변수선언문 in 객체) {...}
+```
+`for...in`문은 상속받은 프로토타입의 프로퍼티까지 열거하지만 프로토타입 체인상에 존재하는 모든 프로퍼티 중에서 프로퍼티 어트리뷰트 [[Enumerable]]의 값이 true인 프로퍼티를 순회하며 열거한다.
+
+```
+const person = {
+  name: "kim",
+  age: 10,
+
+  __proto__: {
+    address: "seoul",
+  },
+};
+
+for (const key in person) {
+	console.log(`${key} : ${person[key]}`);
+}
+/*
+name : kim
+age : 10
+address : seoul
+*/
+```
+
+**상속받은 프로퍼티는 제외하고 객체 자신의 프로퍼티만 열거하려면 `Object.prototype.hasOwnProperty` 메서드를 사용하여 객체 자신의 프로퍼티인지 확인해야한다.**
+```
+for (const key in person) {
+	if (person.hasOwnProperty(key)) {
+		console.log(`${key} : ${person[key]}`);
+	}
+}
+/*
+name : kim
+age : 10
+*/
+```
+**`for...in`문은 열거할 때 순서를 보장하지 않음! 특시 숫자인 프로퍼티 키에 대해서는 정렬하여 열거된다**
+
+```
+const obj = {
+  '3': 3,
+	2: 2,
+	1: 1,
+	a: 'a',
+	b: 'b'
+};
+
+for (const key in obj) {
+	if (obj.hasOwnProperty(key)) {
+		console.log(`${key} : ${obj[key]}`);
+	}
+}
+
+/*
+1 : 1
+2 : 2
+3 : 3
+a : a
+b : b
+*/
+```
+
+
+### 19.14.2 `Object.keys/values/entries` 메서드
