23-11-01 19장 프로토타입

--- a/19_프로토타입.md
+++ b/19_프로토타입.md
@@ -381,7 +381,8 @@ address : seoul
 */
 ```
 
-**상속받은 프로퍼티는 제외하고 객체 자신의 프로퍼티만 열거하려면 `Object.prototype.hasOwnProperty` 메서드를 사용하여 객체 자신의 프로퍼티인지 확인해야한다.**
+#### 상속받은 프로퍼티는 제외하고 객체 자신의 프로퍼티만 열거하려면
+`Object.prototype.hasOwnProperty` 메서드를 사용하여 객체 자신의 프로퍼티인지 확인해야한다.
 ```
 for (const key in person) {
 	if (person.hasOwnProperty(key)) {
@@ -393,7 +394,8 @@ name : kim
 age : 10
 */
 ```
-**`for...in`문은 열거할 때 순서를 보장하지 않음! 특시 숫자인 프로퍼티 키에 대해서는 정렬하여 열거된다**
+
+**`for...in`문은 열거할 때 순서를 보장하지 않음! <br>특히 숫자인 프로퍼티 키에 대해서는 정렬하여 열거된다.**
 
 ```
 const obj = {
@@ -421,3 +423,44 @@ b : b
 
 
 ### 19.14.2 `Object.keys/values/entries` 메서드
+`Object.keys` 객체 지신의 열거 가능한 프로퍼티 키를 배열로 반환
+```
+const person = {
+	name: 'kim',
+	age: 10,
+
+  __proto__: {
+    address: "seoul",
+  },
+}
+
+console.log(Object.keys(person)) // ['name', 'age']
+```
+
+`Object.values` 객체 지신의 열거 가능한 프로퍼티 값을 배열로 반환
+```
+const person = {
+	name: 'kim',
+	age: 10,
+
+  __proto__: {
+    address: "seoul",
+  },
+}
+
+console.log(Object.keys(person)) // ['kim', 10]
+```
+
+`Object.entries` 객체 지신의 열거 가능한 프로퍼티 키와 값을 배열에 담아 배열로 반환(이차 배열)
+```
+const person = {
+	name: 'kim',
+	age: 10,
+
+  __proto__: {
+    address: "seoul",
+  },
+}
+
+console.log(Object.entries(person)) // [['name', 'kim'], ['age', 10]]
+```
