--- a/23_실행_컨텍스트.md
+++ b/23_실행_컨텍스트.md
@@ -1,4 +1,8 @@
 # 23. 실행 컨텍스트
+> 코어자바스크립트 CHAPTER 02_실행 컨텍스트 참고.<br>
+
+실행할 코드에 제공할 정보들을 모아놓은 객체.
+
 ## 23.1 소스코드의 타입
 ECMAScript는 소스코드를 4가지 타입으로 구분하고 4가지 타입의 소스코드는 실행컨텍스트를 생성
 
@@ -42,4 +46,96 @@ var a = 1;
 var a;
 a = 1;
 ```
-`#1`은 `#2`처럼 2개의 과정으로 나누어 처리됨
+`#1`은 `#2`처럼 2개의 과정으로 나누어 처리됨.
+
+## 23.3 실행 컨텍스트의 역할
+1. 전역 코드 평가
+소스 코드 평가 과정에서 전역코드, 전역 함수 선언문이 먼저 실행되고, 생성된 전역 변수와 전역 함수가 실행 컨텍스트가 관리하는 스코프에 등록됨.
+
+2. 전역 코드 실행
+전역 코드 평가 과정이 끝나면 런타임이 시작되어 전역 코드가 실행됨. 전역 변수에 값이 할당되고 함수가 호출됨.<br>
+함수가 호출되면 순차적으로 실행되던 전역 코드의 실행을 일시 중단하고 코드 실행 순서를 변경하여 함수 내부로 진입.
+
+3. 함수 코드 평가
+함수 내부의 코드 평가 과정을 거치며 코드를 실행하기 위한 준비한다. 매개변수와 지역 변수 선언문이 먼저 실행되고, 생성된 매개변수와 지역 변수가 실행 컨텍스트가 관리하는 지역 스코프에 등록된다. 함수 나부에서 지역 변수처럼 사용할 수 있는 arguments객체가 생성되어 지역 스코프에 등록되고 this 바인딩도 결정된다.
+
+4. 함수 코드 실행
+함수 코드 평가 과정이 끝나면 런타임이 시작되어 함수 코드가 순차적으로 실행됨. 함수 코드 실행 과정이 종료되면 함수 호출 이전으로 되돌아가 전역 코드 실행을 계속한다.
+
+실행 컨텍스트가 활성화될 때 자바스크립트 엔진은 **해당 컨텍스트에 관련된 코드들을 실행하는데 필요한 환경 정보들을 수집해서 실행 컨텍스트 객체에 저장.**
+
+## 실행 컨텍스트 객체
+활성화된 실행 컨텍스트에 담기는 정보
+- VariableEnvironment<br>
+  현재 컨텍스트 내의 식별자들에 대한 정보 + 외부 환경정보, 선언시점의 LexicalEnvironment의 스냅샷(최초 실행시의 스냅샷을 유지, 변경사항은 반영되지 않음)
+- LexicalEnvironment<br>
+  처음에는 VariableEnvironment와 같지만 변경사항이 실시간으로 반영됨
+- thisBinding<br>
+  식별자가 바라봐야 할 대상 객체
+
+VariableEnvironment와 LexicalEnvironment의 내부에는 environmentRecord와 outerEnvironmentReference로 구성되어 있음.
+
+**environmentRecord**는 매개변수명, 변수의 식별자, 선안한 함수의 함수명 등을 수집.
+**outerEnvironmentReference**는 바로 직전 컨텍스트의 LexicalEnvironment 정보를 참조함.
+
+
+
+## 23.4 실행 컨텍스트 스택
+실행 컨텍스트는 스택 자료구조로 관리되며, 이를 실행 컨텍스트 스택이라 한다.
+```
+const x = 1;
+
+function foo() {
+  const  y = 2;
+
+  function bar() {
+    const z = 3;
+    consolg.log(x+y+z);
+  }
+  bar();
+}
+
+foo(); //6
+```
+**실행 컨택스트 스택**
+<table>
+  <tr>
+    <td rowspan="3" style="border:1px solid #000">&nbsp;</td>
+    <td rowspan="3">></td>
+    <td rowspan="2"> </td>
+    <td rowspan="3">></td>
+    <td> </td>
+    <td rowspan="3">></td>
+    <td style="border:1px solid #000">bar 함수<br>실행 컨텍스트</td>
+    <td rowspan="3">></td>
+    <td> </td>
+    <td rowspan="3">></td>
+    <td rowspan="2"> </td>
+    <td rowspan="3">></td>
+    <td rowspan="3" style="border:1px solid #000">&nbsp;</td>
+  </tr>
+  <tr>
+    <td style="border:1px solid #000">foo 함수<br>실행 컨텍스트</td>
+    <td style="border:1px solid #000">foo 함수<br>실행 컨텍스트</td>
+    <td style="border:1px solid #000">foo 함수<br>실행 컨텍스트</td>
+  </tr>
+  <tr>
+    <td style="border:1px solid #000">전역<br>실행 컨텍스트</td>
+    <td style="border:1px solid #000">전역<br>실행 컨텍스트</td>
+    <td style="border:1px solid #000">전역<br>실행 컨텍스트</td>
+    <td style="border:1px solid #000">전역<br>실행 컨텍스트</td>
+    <td style="border:1px solid #000">전역<br>실행 컨텍스트</td>
+  </tr>
+</table>
+
+실행 컨텍스트 스택은 코드의 실행 순서를 관리. 시행 컨텍스트 스택의 최상위에 존재하는 실행 컨텍스트는 언제나 현재 실행중인 코드의 실행 컨텍스트다.
+
+## 23.5 렉시컬 환경
+실행 컨텍스트 스택이 코드의 실행 순서를 관리한다면 렉시컬 환경은 스코프와 식별자를 관리함.<br>
+키와 값을 같는 객체 형태의 스코프(전역, 함수, 블록스코프)를 생성하여 식별자를 키로 등록하고 식별자에 바인딩된 값을 관리. **렉시컬 환경은 스코프를 구분하여 식별자를 등록 및 관리하는 저장소 역할을 함**
+실행 컨텍스트를 생성할 때 VariableEnvironment에 정보를 먼저 담고, 이를 그대로 복사하여 LexicalEnvironment을 만든다.
+
+## 23.6 실행 컨텍스트의 생성과 식별자 검색 과정
+
+
+## 23.7 실행 컨텍스트와 블록 레벨 스코프
