[23-11-10] 실행 컨텍스트

--- a/23_실행_컨텍스트.md
+++ b/23_실행_컨텍스트.md
@@ -1,6 +1,7 @@
 # 23. 실행 컨텍스트
 > 코어자바스크립트 CHAPTER 02_실행 컨텍스트 참고.<br>
-> [[10분 테코톡] 💙 하루의 실행 컨텍스트](https://www.youtube.com/watch?v=EWfujNzSUmw)
+> [[10분 테코톡] 💙 하루의 실행 컨텍스트](https://www.youtube.com/watch?v=EWfujNzSUmw)<br>
+> [실행-컨텍스트렉시컬-환경과-this](https://velog.io/@woobuntu/실행-컨텍스트렉시컬-환경과-this)
 
 실행할 코드에 제공할 정보들을 모아놓은 객체.
 
@@ -61,9 +62,10 @@ a = 1;
 함수 내부의 코드 평가 과정을 거치며 코드를 실행하기 위한 준비한다. 매개변수와 지역 변수 선언문이 먼저 실행되고, 생성된 매개변수와 지역 변수가 실행 컨텍스트가 관리하는 지역 스코프에 등록된다. 함수 나부에서 지역 변수처럼 사용할 수 있는 arguments객체가 생성되어 지역 스코프에 등록되고 this 바인딩도 결정된다.
 
 4. 함수 코드 실행
-함수 코드 평가 과정이 끝나면 런타임이 시작되어 함수 코드가 순차적으로 실행됨. 함수 코드 실행 과정이 종료되면 함수 호출 이전으로 되돌아가 전역 코드 실행을 계속한다.
+함수 코드 평가 과정이 끝나면 런타임이 시작되어 함수 코드가 순차적으로 실행됨. 함수 코드 실행 과정이 종료되면 함수 호출 이전으로 되돌아가고, 콜스택에서 해당 함수가 빠지며, 실행 컨텍스트 역시 사라진다.<br>
+*같은 함수를 다시 호출하더라도 이전에 있던 실행 컨텍스트를 사용하는 것이 아니라 새로운 컨텍스트를 생성하는것*
 
-실행 컨텍스트가 활성화될 때 자바스크립트 엔진은 **해당 컨텍스트에 관련된 코드들을 실행하는데 필요한 환경 정보들을 수집해서 실행 컨텍스트 객체에 저장.**
+실행 컨텍스트가 활성화될 때 자바스크립트 엔진은 **해당 컨텍스트에 관련된 코드들을 실행하는데 필요한 환경 정보들을 수집해서 실행 컨텍스트 객체에 저장.**<br>
 
 ## 실행 컨텍스트 객체
 활성화된 실행 컨텍스트에 담기는 정보
@@ -87,11 +89,15 @@ VariableEnvironment와 LexicalEnvironment의 내부에는 environmentRecord와 o
 **LexicalEnvironment(정적 환경)**<br>
 - environmentRecord(환경레코드, 식별자와 식별자에 바인딩된 값을 관리)
   - Object Environment Record(객체 환경레코드)<br>
-    Binding Object라는 객체와 연결. 상위 스코프의 코드 평가 과정에서 var키워드로
+    Binding Object라는 객체와 연결. 상위 스코프의 코드 평가 과정에서 let과 const를 제외한 변수와 함수를 참조한다.<br>
+    굳이 '객체 환경 레코드'와 '선언적 환경 레코드'를 구분하는 것은 글로벌 스코프의 '객체 환경 레코드가' 동적으로 함수와 변수를 바인딩하기 때문.<br>
   - Declarative Environment Record(선언적 환경 레코드)<br>
-    상위 스코프에서 let, const 키워드로 선언한 변수가 등록되고 관리됨.
+    function문, try-catch의 catch문에서 생성.<br>
+    상위 스코프에서 let, const 키워드로 선언한 변수(let, const 키워드로 선언한 변수에 할당한 함수 표현식 포함)가 등록되고 관리됨.<br>
+    일반 함수 스코프는 함수가 선언된 위치에 의해 결정되고, 함수의 호출과는 관계없기 때문에 '선언적 환경 레코드'라고 불러 '객체 환경 레코드'와 구분하는것.
+
 - outerEnvironmentReference<br>
-  상위 스코프의 렉시컬환경을 가리킴.<br>
+  상위 스코프 참조.<br>
   현재 평가 중인 소스가 전역 코드일 경우 전역 코드를 포함하는 소스코드는 없으므로 전역 렉시컬 환경의 외부 렉시컬 환경에 대한 참조는 null이 할당됨.(전역 렉시컬 한경이 스코프 체인의 종점에 존재함을 의미)
 
 **thisBinding**<br>
@@ -156,45 +162,7 @@ foo(); //6
 실행 컨텍스트를 생성할 때 VariableEnvironment에 정보를 먼저 담고, 이를 그대로 복사하여 LexicalEnvironment을 만든다.
 
 ## 23.6 실행 컨텍스트의 생성과 식별자 검색 과정
-```
-var x = 1;
-const y = 2;
-
-function foo(a) {
-  var x = 3;
-  const y = 4;
-
-  function bar(b) {
-    const z = 5;
-    console.log(a + b + x + y + z);
-  }
-  bar(20)
-}
-foo(30) // 62
-```
-### 23.6.1 전역 객체 생성
-전역 객체는 전역 코드가 평가되기 이전에 생성되며, 전역 객체에 다음 요소들이 포함된다.
-- 빌트인 전역 프로퍼티
-- 빌트인 전역 함수
-- 표준 빌트인 객체
-- 동작 환경에 따른 호스트 객체 및 WebAPI등
-전역 객체도 Object.prototype을 상속 받음.
-```
-window.__proto__.__proto__.__proto__.__proto__ === Object.prototype; // true
-```
-
-### 23.6.2 전역 코드 평가
-소스코드가 로드되면 자바스크립트 엔진은 전역 코드를 평가한다. <br>
-> <활성화된 실행 컨텍스트의 수집 정보> 참고
-
-- 전역 실행 컨텍스트 생성(실행 중인 실행 컨텍스트)<br>
--  전역 렉시컬 환경 생성(전역 실행 컨텍스트에 바인딩)<br>
-   - 전역 환경 레코드 생성<br>
-     -  객체 환경 레코드 생성<br>
-     -  선언적 환경 레코드 생성(let, const로 선언한 변수)<br>
-   - this 바인딩<br>
-   - 외부 렉시컬 환경에 대한 참고 결정(현재 평가중인 소스코드를 포함하는 외부 소스코드의 렉시컬 환경, 상위 스코프)
-
-### 23.6.3 전역코드 실행
+> <활성화된 실행 컨텍스트의 수집 정보>와 책 참고
 
 ## 23.7 실행 컨텍스트와 블록 레벨 스코프
+> <활성화된 실행 컨텍스트의 수집 정보>와 책 참고
